Remove higher kinded types